# step2glb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pages.yml
crates/capi/: Cargo.toml
crates/capi/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: convert.rs  csg.rs  geom.rs  glb.rs  hierarchy.rs  io.rs  lib.rs  merge.rs  mesh.rs  model.rs  step.rs  styles.rs  tessellate.rs
crates/core/tests/: integration.rs  proptest_math.rs
crates/core/tests/fixtures/: as1_pe_203.stp  assembly.step  bspline_cone_pole.step  bspline_patch.step  bspline_unbounded.step  colored.step  cone_complex_curve.step  cone_frustum_past_apex.step  cone_winding_to_apex.step  csg_block_minus_cylinder.step  cylinder_band.step  cylinder_offset_seam_rims.step  cylinder_winding_notch.step  degenerate_plane_slit.step  degenerate_sliver_face.step  extrusion_face.step  half_cone_apex.step  hemisphere_poles.step  inscribed_hole.step  malformed_offsurface_boundary.step  null_curve_edge.step  revolution_cylinder.step  sphere_cap.step  sphere_lune_through_poles.step  sphere_slit.step  thin_arc_band.step  torus_winding_ring.step  triangle.step  two_edge_arc_sliver.step
crates/tess2-rust/: .cargo_vcs_info.json  .gitignore  Cargo.toml  LICENSE  README.md
crates/tess2-rust/src/: bucketalloc.rs  dict.rs  geom.rs  lib.rs  priorityq.rs  sweep.rs
crates/tess2-rust/src/mesh/: delaunay.rs  mod.rs  tessellate.rs
crates/tess2-rust/src/tess/: api.rs  geometry.rs  mod.rs  output.rs  tests.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
src/: csg.rs  geom.rs  glb.rs  hierarchy.rs  lib.rs  main.rs  merge.rs  mesh.rs  model.rs  step.rs  styles.rs  tessellate.rs
tests/: integration.rs  proptest_math.rs
tests/fixtures/: bspline_cone_pole.step  colored.step  csg_block_minus_cylinder.step  cylinder_band.step  degenerate_sliver_face.step  null_curve_edge.step  sphere_slit.step  thin_arc_band.step  two_edge_arc_sliver.step
wasm-demo/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
wasm-demo/src/: main.js  main.ts  stepConvert.ts  stepConvertWorker.ts  worker.js
