[package]
name = "step2glb"
version = "0.1.0"
edition = "2021"
description = "Low-memory STEP (ISO 10303-21) parser: hierarchy dump + tessellation to GLB"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
md5 = "0.7"
meshopt = "0.6"
tess2-rust = "1.1.0"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
serde_json = "1"
