[workspace]
members = ["crates/core", "crates/cli", "crates/capi", "crates/wasm"]
# plain `cargo build` / `cargo test` operate on the native crates; the wasm
# shell is built explicitly for its target:
#   cargo build -p step2glb-wasm --target wasm32-unknown-unknown
default-members = ["crates/core", "crates/cli", "crates/capi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vegar Ringdal <vegar.ringdal@postboxen.no>"]

# Profiles only take effect at the workspace root.
[profile.release]
lto = true
codegen-units = 1
