[package]
name = "step2glb-capi"
description = "C ABI for step2glb: STEP bytes → GLB bytes, for embedding in other languages"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# distinct from core's lib name (`step2glb`) to avoid an output-file collision;
# the exported C symbols are `#[no_mangle]` so they are unaffected by this.
[lib]
name = "step2glb_capi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
step2glb-core = { path = "../core" }
