[package]
name = "step2glb-core"
description = "STEP (ISO 10303-21) parsing, tessellation and GLB export — the platform-agnostic library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Keep the crate (import) name `step2glb` so `use step2glb::...` is unchanged
# across the CLI, tests and any future wasm/capi shells.
[lib]
name = "step2glb"
path = "src/lib.rs"

[features]
default = ["optimize", "mmap"]
# meshoptimizer pass (weld / vertex-cache / simplify). Pulls in a C++ build, so
# the wasm / capi shells can drop it; without it meshes are valid, just larger.
optimize = ["dep:meshopt"]
# memory-map the STEP input (native only — files larger than RAM, paged by the
# OS). wasm builds with --no-default-features and feeds bytes via an InputHandle.
mmap = ["dep:memmap2"]

[dependencies]
md5 = "0.7"
tess2-rust = "1.1.0"
meshopt = { version = "0.6", optional = true }
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
proptest = "1.11.0"
serde_json = "1"
