[package]
name = "step2glb-wasm"
description = "WebAssembly shell for step2glb: STEP bytes → GLB bytes, in the browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# no meshopt / mmap in the browser build
step2glb-core = { path = "../core", default-features = false }
wasm-bindgen = "0.2"
