[package]
name = "step2glb-wasm"
description = "WebAssembly shell for step2glb: STEP bytes → GLB bytes, in the browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# no meshopt / mmap in the browser build
step2glb-core = { path = "../core", default-features = false }
wasm-bindgen = "0.2"
# turns wasm aborts (incl. OOM) into a readable console message instead of a
# bare `unreachable`
console_error_panic_hook = "0.1"
